<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog"
    tools:context=".ui.bidder.bottomDialog.BidderStatusFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/silahkan_login_untuk_melanjutkan_penawaran"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/primary_blue"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title"></Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_marginTop="8dp"
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/title_choose_image_provider" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/perbarui_status_penjualan_produkmu"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <RadioButton
                android:id="@+id/rb_berhasil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:paddingStart="16dp"
                android:text="@string/berhasil_terjual"
                android:textSize="18sp"
                android:textStyle="bold"
                app:buttonTint="@color/primary_blue"
                tools:ignore="RtlSymmetry">

            </RadioButton>

            <TextView
                android:id="@+id/tv_berhasil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/kamu_telah_sepakat_menjual_produk_ini_kepada_pembeli"
                android:textSize="18sp"></TextView>

            <RadioButton
                android:id="@+id/rb_batalkan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat_bold"
                android:paddingStart="16dp"
                android:text="@string/batalkan_transaksi"
                android:textSize="18sp"
                android:textStyle="bold"
                app:buttonTint="@color/primary_blue"
                tools:ignore="RtlSymmetry">

            </RadioButton>

            <TextView
                android:id="@+id/tv_batalkan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/kamu_membatalkan_transaksi_produk_ini_dengan_pembeli"
                android:textSize="18sp"></TextView>

        </RadioGroup>


        <Button
            android:id="@+id/btn_kirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/btn_tertarik"
            android:fontFamily="@font/montserrat_medium"
            android:paddingHorizontal="28dp"
            android:paddingVertical="8dp"
            android:text="@string/kirim"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp"
            app:backgroundTint="@color/primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/radioGroup" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_kirim"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        </Space>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>