<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/rounded_dialog"
    tools:context=".ui.bidder.BidderBerhasilFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/silahkan_login_untuk_melanjutkan_penawaran"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Button
            android:id="@+id/btnLogin"
            android:backgroundTint="@color/primary_blue"
            android:textColor="@color/white"
            android:text="@string/login"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </Button>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialogBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:ignore="MissingConstraints">
        <ProgressBar
            android:id="@+id/progressBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_marginTop="8dp"
            android:id="@+id/imageView5"
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/yeay_kamu_berhasil_mendapatkan_harga_yang_sesuai"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvHargaTawaran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/segera_hubungi_pembeli_melalui_whatsapp_untuk_transaksi_selanjutnya"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            android:layout_margin="4dp"
            android:layout_marginTop="16dp"
            app:cardElevation="4dp"
            android:id="@+id/btn_product"
            android:backgroundTint="@color/white"
            app:layout_constraintTop_toBottomOf="@+id/tvHargaTawaran">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:fitsSystemWindows="true"
                android:layout_margin="8dp">
                <TextView
                    android:id="@+id/tv_product_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_match"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:layout_marginTop="16dp"
                    android:id="@+id/img_profile"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_broken"
                    android:fitsSystemWindows="true"
                    app:layout_constraintTop_toBottomOf="@id/tv_product_match"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:text="@string/name_buyer"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/img_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_profile" />
                <TextView
                    android:id="@+id/tv_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/city"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@+id/img_profile"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    app:layout_constraintBottom_toBottomOf="@id/img_profile"
                    />
                <ImageView
                    android:layout_marginTop="20dp"
                    android:id="@+id/img_product"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_broken"
                    android:fitsSystemWindows="true"
                    app:layout_constraintTop_toBottomOf="@id/img_profile"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/tv_name_product"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="-8dp"
                    android:text="@string/title_product"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@id/img_product"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_product" />
                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"

                    android:text="@string/rp_1_000_000"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_product"

                    />
                <TextView
                    android:id="@+id/tv_ditawar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="64dp"
                    android:layout_marginTop="4dp"
                    android:text="Ditawar Rp 2.000.000"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/tv_price"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_kirim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="28dp"
            android:paddingVertical="8dp"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:background="@drawable/btn_tertarik"
            android:text="@string/hubungi_via_whatsapp"
            android:textColor="#ffffff"
            android:drawableEnd="@drawable/ic_whatsapp"
            app:backgroundTint="@color/primary_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_product" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            app:layout_constraintTop_toBottomOf="@id/btn_kirim"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

        </Space>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>