<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBackdrop"
                android:layout_width="match_parent"
                android:layout_height="326dp"
                tools:src="@tools:sample/backgrounds/scenic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:scaleType="fitXY"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@drawable/detail_and_preview_background"
                app:layout_constraintTop_toBottomOf="@id/ivBackdrop"
                app:layout_constraintBottom_toBottomOf="@id/cv_profile"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp"
                android:layout_margin="16dp"
                android:id="@+id/btn_product"
                android:backgroundTint="@color/white"
                app:layout_constraintStart_toStartOf="@id/ivBackdrop"
                app:layout_constraintEnd_toEndOf="@id/ivBackdrop"
                app:layout_constraintTop_toBottomOf="@id/ivBackdrop"
                app:layout_constraintBottom_toBottomOf="@id/ivBackdrop"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/tv_title"
                        android:textColor="@color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title_product"
                        android:textStyle="bold"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_marginTop="4dp"
                        android:id="@+id/tv_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/category"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/tv_title"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_marginTop="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rp_1_000_000"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/tv_category"
                        android:textSize="18sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:layout_margin="16dp"
                app:cardElevation="8dp"
                android:id="@+id/cv_profile"
                android:backgroundTint="@color/white1"
                app:layout_constraintTop_toBottomOf="@+id/btn_product"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_broken"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/seller_name"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/img_profile" />

                    <TextView
                        android:id="@+id/tv_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/bandung"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@+id/img_profile"
                        app:layout_constraintTop_toBottomOf="@id/tv_name" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="96dp"
                app:cardElevation="8dp"
                android:backgroundTint="@color/white1"
                android:id="@+id/btn_desc"
                app:layout_constraintTop_toBottomOf="@+id/cv_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="MissingConstraints">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/tv_titleDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/deskripsi"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/tv_Desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/lorem"
                        android:textSize="16sp"
                        app:layout_constraintTop_toBottomOf="@id/tv_titleDesc" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:background="@drawable/rounded_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_back" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_terbit"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/btn_tertarik"
        android:text="Terbitkan"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>